# SynthSnake

./: .cursorrules  .gitattributes  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  nginx.conf  settings.json
SynthSnakeWebDeployment/: SynthSnake.js  index.html  style.css
k8s/: app-ingress.yaml  deployment.yaml  service.yaml
src/: events.rs  food.rs  game_assets.rs  main.rs  snake.rs  window.rs
