[package]
name = "rusty_snake"
version = "0.1.0"
edition = "2021"
authors = ["Walter Branning <walter.d.branning@icloud.com>"]

[dependencies]
bevy = { version = "0.15.0", features = ["dynamic_linking", "mp3", "wav"] }
# bevy-inspector-egui = "0.27.0"

# bevy-inspector-egui-rapier = { version = "*", features = ["rapier2d"] }
# bevy_rapier2d = { version = "0.27.0", features = [ "simd-stable", "debug-render-2d" ] }
rand = "0.8"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[toolchain]
channel = "nightly"

[target.x86_64-unknown-linux-gnu]
linker = "clang"
rustflags = ["-C", "link-arg=-fuse-ld=lld"]

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
